Jour 13 - Intégration au projet
Ajout des scripts d'execution pour composer
Mise au niveau 5 de PHPStan et correction des erreurs
Utilisation de pint pour la qualitée
Modification des suggestion par refactor

--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,13 @@
         ]
     },
     "scripts": {
-        "lint": "pint --test",
-        "fix": "pint",
-        "analyse": "phpstan analyse --level=5",
-        "quality": ["@lint", "@analyse"]
+        "lint": "vendor/bin/pint --test",
+        "fix": "vendor/bin/pint",
+        "analyse": "vendor/bin/phpstan analyse",
+        "refactor": "vendor/bin/rector --dry-run",
+        "quality": [
+            "@lint",
+            "@analyse"
+        ]
     }
 }
